Fix API docs and catalog data
